--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### Credentials ###
+credentials.txt
+
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -5,10 +8,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
@@ -40,6 +40,3 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-
-### Credentials ###
-*/credentials.txt
