--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group 'com.github.chicoferreira'
@@ -11,4 +12,17 @@ repositories {
 
 dependencies {
     implementation "com.twitter:twitter-api-java-sdk:2.0.2"
+}
+
+jar.enabled = false
+
+shadowJar {
+    classifier(null) // Remove -all suffix
+}
+
+jar {
+    dependsOn(shadowJar)
+    manifest {
+        attributes 'Main-Class': 'com.github.chicoferreira.twitterdeprecatedfollowers.Main'
+    }
 }
